feat(main): Enabled worker module auto metrics

--- a/worker-demo/configs/config.yaml
+++ b/worker-demo/configs/config.yaml
@@ -51,3 +51,7 @@ modules:
       test: test-topic
     subscriptions:
       test: test-topic-sub
+  worker:
+    metrics:
+      collect:
+        enabled: true
