feat: simplified worker-demo app

--- a/worker-demo/.env.example
+++ b/worker-demo/.env.example
@@ -1,4 +1,6 @@
 APP_ENV=dev
 APP_DEBUG=true
-PUBSUB_PROJECT_ID=test
-PUBSUB_EMULATOR_HOST=worker-demo-pubsub:8085
+PUBSUB_PROJECT_ID=demo-project
+PUBSUB_TOPIC_ID=demo-topic
+PUBSUB_SUBSCRIPTION_ID=demo-subscription
+PUBSUB_EMULATOR_HOST=worker-demo-pubsub:8681
