feat(main): gRPC demo doc

--- a/grpc-demo/Makefile
+++ b/grpc-demo/Makefile
@@ -15,7 +15,7 @@ fresh:
 	docker compose build --no-cache
 	docker compose up -d --build -V
 
-proto:
+protogen:
 	protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/transform.proto
 logs:
 	docker compose logs -f
