chore(main): updated http demo app and added jaeger for tracing

--- a/http-demo/.env.example
+++ b/http-demo/.env.example
@@ -6,3 +6,5 @@ MYSQL_DATABASE=app
 MYSQL_USER=user
 MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=rootpassword
+OTLP_COLLECTOR_HOST=http-demo-jaeger
+OTLP_COLLECTOR_PORT=4317
