--- a/http-demo/configs/config.dev.yaml
+++ b/http-demo/configs/config.dev.yaml
@@ -3,3 +3,8 @@ app:
 modules:
   log:
     output: console
+  trace:
+    processor:
+      type: otlp-grpc
+      options:
+        host: ${OTLP_COLLECTOR_HOST}:${OTLP_COLLECTOR_PORT}
