--- a/http-demo/docker-compose.yaml
+++ b/http-demo/docker-compose.yaml
@@ -30,6 +30,18 @@ services:
     env_file:
       - .env
 
+  http-demo-jaeger:
+    container_name: http-demo-jaeger
+    image: jaegertracing/all-in-one
+    networks:
+      - http-demo
+    ports:
+      - "4317:4317"
+      - "9411:9411"
+      - "16686:16686"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+
 volumes:
   http-demo-database-data:
     driver: local
