--- a/worker-demo/.env.example
+++ b/worker-demo/.env.example
@@ -4,3 +4,5 @@ PUBSUB_PROJECT_ID=demo-project
 PUBSUB_TOPIC_ID=demo-topic
 PUBSUB_SUBSCRIPTION_ID=demo-subscription
 PUBSUB_EMULATOR_HOST=worker-demo-pubsub:8681
+OTLP_COLLECTOR_HOST=worker-demo-jaeger
+OTLP_COLLECTOR_PORT=4317
