chore(main): Updated gRPC service default transformer

--- a/grpc-demo/configs/config.yaml
+++ b/grpc-demo/configs/config.yaml
@@ -58,6 +58,8 @@ modules:
     level: info
     output: stdout
 config:
+  transform:
+    default: upper
   authentication:
     enabled: false
     secret: super-secret
