feat: sql rework

--- a/http-demo/Makefile
+++ b/http-demo/Makefile
@@ -16,6 +16,11 @@ fresh:
 	docker compose down --remove-orphans
 	docker compose build --no-cache
 	docker compose up -d --build -V
+	docker compose exec http-demo-app go run . migrate reset
+	docker compose exec http-demo-app go run . migrate up
+
+migrate:
+	docker compose exec http-demo-app go run . migrate up
 
 logs:
 	docker compose logs -f
