feat: sql rework

--- a/http-demo/configs/config.test.yaml
+++ b/http-demo/configs/config.test.yaml
@@ -1,11 +1,12 @@
 app:
   debug: true
 modules:
+  mysqlmemory:
+    config:
+      protocol: bufconn
   sql:
-    driver: sqlite
-    dsn: ":memory:"
     migrations:
-      stdout: false
+        stdout: false
   log:
     output: test
   trace:
