feat: sql rework

--- a/http-demo/configs/config.test.yaml
+++ b/http-demo/configs/config.test.yaml
@@ -1,10 +1,11 @@
 app:
   debug: true
 modules:
-  mysqlmemory:
+  gomysqlserver:
     config:
       protocol: bufconn
   sql:
+    dsn: "user:password@mysqlmemory(bufconn)/db?parseTime=true"
     migrations:
         stdout: false
   log:
